test/netlist/error/freevar-external.bop
external calc "./calc.exe -N %{N}"
